--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
         // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
-    
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
 
     testImplementation 'junit:junit:4.12'
