--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity
             android:name=".AddPromotions"
             android:exported="true"/>
+        <activity
+            android:name=".AdminViewPromotion"
+            android:exported="true"/>
     </application>
 
 </manifest>
