customer view promotion list is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".AdminViewPromotion"
             android:exported="true"/>
+        <activity
+            android:name=".CustomerViewPromotionsList"
+            android:exported="true"/>
     </application>
 
 </manifest>
