--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/my_app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="true">
         <activity
             android:name=".ui.StartupActivity"
             android:exported="true">
@@ -20,16 +21,16 @@
         </activity>
         <activity
             android:name=".ui.customer.FavouritesActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.customer.CustomerChangePasswordActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.customer.CustomerEditProfileActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.customer.CustomerProfileActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.SignInActivity"
             android:exported="true">
@@ -41,7 +42,7 @@
         </activity>
         <activity
             android:name=".ui.SignUpActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
